add tools to convert markdown to html